--- a/onepager/index.html
+++ b/onepager/index.html
@@ -290,6 +290,43 @@
             height: 18px;
         }
 
+        /* How It Works Steps */
+        .how-it-works {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            margin-bottom: 6px;
+        }
+
+        .step {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .step-num {
+            width: 24px;
+            height: 24px;
+            background: #c9a962;
+            color: #1a1a1a;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            font-weight: 700;
+            flex-shrink: 0;
+        }
+
+        .step-text {
+            font-size: 11px;
+            color: #ccc;
+        }
+
+        .step-text strong {
+            color: #fff;
+        }
+
         /* Deal Examples */
         .deals-side {
             display: flex;
@@ -598,7 +635,23 @@
             </div>
 
             <div class="deals-side">
-                <div class="section-title">EXAMPLE DEALS YOU COULD OFFER</div>
+                <div class="section-title">HOW IT WORKS</div>
+                <div class="how-it-works">
+                    <div class="step">
+                        <div class="step-num">1</div>
+                        <div class="step-text"><strong>Add your deal</strong> — Choose your offer and set the days/times</div>
+                    </div>
+                    <div class="step">
+                        <div class="step-num">2</div>
+                        <div class="step-text"><strong>Members visit</strong> — They show the app, you enter your 4-digit PIN</div>
+                    </div>
+                    <div class="step">
+                        <div class="step-num">3</div>
+                        <div class="step-text"><strong>Apply & track</strong> — Give the discount, see every redemption live</div>
+                    </div>
+                </div>
+
+                <div class="section-title" style="margin-top: 14px;">EXAMPLE DEALS YOU COULD OFFER</div>
                 <p>Pick what works for your business — you're in control</p>
 
                 <div class="deal-examples">
