Add Chilli and Wolt/Bolt FAQ comparisons

--- a/partners/index.html
+++ b/partners/index.html
@@ -1398,6 +1398,14 @@
         <div class="faq-answer">We charge members a subscription fee (€49/year). Restaurants never pay anything — no signup fee, no commission, no hidden costs. Ever.</div>
       </div>
       <div class="faq-item">
+        <div class="faq-question">How is this different from Chilli.ee?</div>
+        <div class="faq-answer">Chilli sells vouchers and takes a commission from you on every sale. With The Guild Pass, you pay nothing — no commission, no campaign fees. Customers pay us directly for their membership, and you just honor the deal when they visit.</div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-question">How is this different from Wolt or Bolt Food?</div>
+        <div class="faq-answer">Wolt and Bolt take 20–30% of every order to deliver food to people's homes. We bring people to your restaurant instead — and we don't take a cent. No commission, no fees, no cut of your sales.</div>
+      </div>
+      <div class="faq-item">
         <div class="faq-question">What kind of deal do I have to offer?</div>
         <div class="faq-answer">You choose. Most restaurants offer 2-for-1 on mains, 25% off the bill, or a free appetizer. You set the days, times, and any conditions that work for your business.</div>
       </div>
