Update Formspree form ID

--- a/partners/index.html
+++ b/partners/index.html
@@ -1338,7 +1338,7 @@
       <h2 class="section-title">Apply for Launch</h2>
       <p class="form-subtitle">We're selecting 15 founding restaurant partners in Tallinn. Fill in the form and we'll be in touch within 24 hours.</p>
 
-      <form class="form" action="https://formspree.io/f/xyzygwqo" method="POST" id="partner-form">
+      <form class="form" action="https://formspree.io/f/xqeljbjz" method="POST" id="partner-form">
         <div class="form-row two-col">
           <div class="form-group">
             <label for="restaurant">Restaurant Name</label>
