Add brand assets folder with logos, GP icon, and favicons

--- a/partners/index.html
+++ b/partners/index.html
@@ -7,6 +7,11 @@
   <title>Restaurant Partners — The Guild Pass</title>
   <meta name="description" content="Join The Guild Pass for free. Get new customers during off-peak hours, zero commission, cancel anytime. Now signing founding partners in Tallinn.">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/brand/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/brand/apple-touch-icon.png">
+
   <!-- Open Graph -->
   <meta property="og:title" content="Restaurant Partners — The Guild Pass">
   <meta property="og:description" content="New customers through your door at zero cost. Join the membership app bringing hungry diners to Tallinn's best restaurants.">
