--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="description" content="The Guild Pass - 2-for-1 dining, hotel deals, and spa experiences across the Baltic region. Launching soon. Join the waitlist.">
   <title>The Guild Pass — Save While You Enjoy | Coming Soon</title>
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/brand/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/brand/apple-touch-icon.png">
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
