--- a/partners/thankyou/index.html
+++ b/partners/thankyou/index.html
@@ -6,6 +6,11 @@
   <meta name="robots" content="noindex, nofollow">
   <title>Thank You — The Guild Pass</title>
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/brand/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/brand/apple-touch-icon.png">
+
   <!--
   ==============================================
   FACEBOOK PIXEL - ADD YOUR CODE HERE
